[add] registrar foto grupal

--- a/angular.json
+++ b/angular.json
@@ -129,6 +129,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "app"
+    }
+  },
+  "defaultProject": "app",
+  "cli": {
+    "analytics": false
+  }
 }
